--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -92,7 +92,7 @@
             </div>
             <!-- Stats actions pos/neg end -->
             
-            <!-- Stats participant's list Start -->
+            <!-- Stats event's list Start -->
             <div class="row">
                 <div class="col s12" ng-if="collectes.length > 0">
                     <div><h5 class="center white red-text text-lighten-2"><i class="fa fa-bar-chart"></i> {{'stats.teamLabels.listCollect' | translate }}</h5></div>
@@ -103,7 +103,7 @@
                     </ul>
                 </div>
             </div>
-            <!-- Stats participant's list Start -->
+            <!-- Stats event's list Start -->
         </div>
     </div>
 </div>
