--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -13,6 +13,25 @@
         </h5>
 
         <h6 class="card-content">{{event.participants.teamHome.label}} <br/> {{event.participants.teamVisitor.label}}</h6>
-        <h6 class="card-content">{{event.startDate}}</h6>
+        <h6 class="card-content">
+            {{event.startDate}}
+            <a ng-show="mapShow" class="waves-effect waves-light modal-trigger red-text text-lighten-1 right" ng-click="openMap()">
+                <i class="material-icons">location_on</i>
+            </a>
+        </h6>
+    </div>
+</div>
+
+
+<!-- Modal map Player -->
+<div ng-attr-id="modalEvent-{{event._id}}" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i> {{event.address.formatedAddress}}</div>
+        <br>
+        <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
+    </div>
+    <div class="modal-footer">
+      <a href="" class="modal-action modal-close waves-effect waves-red btn btn-s red"
+                   translate="commons.buttons.close"></a>
     </div>
 </div>
