--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -39,6 +39,12 @@
                             <div>&nbsp;</div>
                             <div class="left-align" ng-show="{{player.birthCity !== null}}">{{'playerLabels.playerBirthCity' | translate }} {{player.birthCity}}</div>
                             <div>&nbsp;</div>
+                            <div class="left-align" ng-if="mapShow">
+                                <a class="waves-effect waves-light modal-trigger red-text text-lighten-1" ng-click="openMap()">
+                                    <i class="material-icons">location_on</i> {{player.address.formatedAddress}}
+                                </a>
+                            </div>
+                            <div ng-if="mapShow">&nbsp;</div>    
                         </div>
                         <div class="col m4 s12 grey lighten-4">
                             <div class="left-align"><h5>{{'playerLabels.playerCaracterSection' | translate }}</h5></div>
@@ -57,11 +63,11 @@
                             <div class="center-align"><h5>{{'playerLabels.playerContactSection' | translate }}</h5></div>
                             <div class="divider red lighten-1"></div>
                             <div>&nbsp;</div>
-                            <div class="left-align"><a href="mailto:{{player.contact.email}}" class="red-text text-lighten-1"><i class="material-icons">mail</i> {{player.contact.email}}</a></div>
-                            <div>&nbsp;</div>
                             <div class="left-align"><i class="material-icons">phone</i> {{player.contact.home}}</div>
                             <div>&nbsp;</div>
                             <div class="left-align"><i class="material-icons">smartphone</i> {{player.contact.cellphone}}</div>
+                            <div>&nbsp;</div>
+                            <div class="left-align"><a href="mailto:{{player.contact.email}}" class="red-text text-lighten-1"><i class="material-icons">mail</i> {{player.contact.email}}</a></div>
                             <div>&nbsp;</div>
                         </div>
                     </div>
@@ -87,15 +93,22 @@
                         </a>
                     </div>
                 </div>
-                <div class="blue-grey-text text-darken-2 left-align" ng-show="mapShow">
-                    <h6><i class="material-icons">home</i> {{player.address.formatedAddress}}</h6>
-                </div>
-                <ng-map center="{{player.address.lat}},{{player.address.lng}}" zoom="16" ng-if="mapShow">
-                </ng-map>
-                
             </div>
         </div>
     </div>
     
 <!-- body end-->
 </div>
+
+<!-- Modal map Player -->
+  <div id="mapPlayer" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i> {{player.address.formatedAddress}}</div>
+        <br>
+        <div id="ngMapPlayer" style="width:100%;height:90%;"></div>
+    </div>
+    <div class="modal-footer">
+      <a href="#/private/viewPlayer/{{player._id}}" class="modal-action modal-close waves-effect waves-red btn btn-s red"
+                   translate="commons.buttons.close"></a>
+    </div>
+  </div>
