--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -5,10 +5,10 @@
             <span class="left"><i class="material-icons">{{icon}}</i></span>
             <span>{{title | translate }}</span>
             <span class="right" ng-hide="isCollected">
-                <a href="#/private/updateEvent/{{event._id}}" class="{{textColor2}}"><i class="material-icons">mode_edit</i></a>
+                <a href="#/private/updateEvent/{{event._id}}" class="{{textColor2}} waves-effect waves-light"><i class="material-icons">mode_edit</i></a>
             </span>
             <span class="right" ng-show="isCollected">
-                <a href="#/private/eventStats/{{collectId}}" class="white-text"><i class="fa fa-bar-chart"></i></a>
+                <a href="#/private/eventStats/{{collectId}}" class="{{textColor2}} waves-effect waves-light"><i class="fa fa-bar-chart"></i></a>
             </span>
         </h5>
 
@@ -31,7 +31,7 @@
         <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer">
-      <a href="" class="modal-action modal-close waves-effect waves-red btn btn-s red"
+      <a href="" class="modal-action modal-close waves-effect waves-light btn red"
                    translate="commons.buttons.close"></a>
     </div>
 </div>
