--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -32,39 +32,23 @@
                         <!-- Empty row -->
                         <div class="row">&nbsp;</div>
                         
-                        <!-- Gender & Nationality -->
-                        <div class="row">
-                            <div class="col m1 hide-on-small-only">&nbsp;</div>
-                            <div class="col s12 m4">
-                                <div class="row">
-                                    <div class="input-field col s3">
-                                        <label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                                    </div>
-                                    <div class="input-field col s9 center-align">
-                                        <input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="signup.gender" required/>
-                                        <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
+                        <!-- Gender for Small device -->
+                        <div class="row  hide-on-med-and-up">
+							<div class="input-field col s3">
+                            	<label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
+							</div>
+                            <div class="input-field col s9 center-align">
+                            	<input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="signup.gender" required/>
+                                <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
 
-                                        <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="signup.gender" required/>
-                                        <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
-                                    </div>
-                                    <span class="small red-text text-lighten-1"
-                                        ng-show="userCivilSectionForm.gender.$invalid && !userCivilSectionForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
-                                </div>
+                                <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="signup.gender" required/>
+                                <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
                             </div>
-                            
-                            <div class="col s1 m1">&nbsp;</div>
-                            
-                            <div class="col m5 hide-on-small-only">
-                                <div class="input-field row">
-                                    <input type="text" id="userNationality" class="form-control validate" ng-autocomplete ng-model="signup.nationality.label" details="temp.detailsCountry" options="optionsCountry" placeholder=""/>
-                                    <label for="userNationality">{{'civilSection.label.userNationality' | translate }}</label>
-                                </div>
-                            </div>
-                            <div class="col s1 m1">&nbsp;</div>
-                        </div>
+                            <span class="small red-text text-lighten-1"
+                                ng-show="userCivilSectionForm.gender.$invalid && !userCivilSectionForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
+                       	</div>
                         
-                        
-                        <!-- Firstname & Name -->
+                        <!-- Firstname & Name all size-->
                         <div class="row">
                             <div class="col m1 hide-on-small-only">&nbsp;</div>
                             <div class="col s12 m4">
@@ -90,7 +74,36 @@
                             <div class="col m1 hide-on-small-only">&nbsp;</div>
                         </div>
                         
-                        <!-- BirthDate & Phone Home -->
+                        <!-- Gender & Nationality on Med and Up -->
+                        <div class="row hide-on-small-only">
+                            <div class="col m1 hide-on-small-only">&nbsp;</div>
+                            <div class="col m4">
+                                <div class="row">
+                                    <div class="input-field col s3">
+                                        <label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                                    </div>
+                                    <div class="input-field col s9 center-align">
+                                        <input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="signup.gender" required/>
+                                        <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
+
+                                        <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="signup.gender" required/>
+                                        <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
+                                    </div>
+                                    <span class="small red-text text-lighten-1"
+                                        ng-show="userCivilSectionForm.gender.$invalid && !userCivilSectionForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
+                                </div>
+                            </div>
+                            <div class="col m1">&nbsp;</div>
+                            <div class="col m5 ">
+                                <div class="input-field row">
+                                    <input type="text" id="userAddress" class="form-control validate" ng-autocomplete ng-model="temp.address" details="temp.detailsAddress" options="optionsAddress" placeholder=""/>
+                                    <label for="userAddres">{{'civilSection.label.userAddress' | translate }}</label>
+                                </div>
+                            </div>
+                            <div class="col s1 m1">&nbsp;</div>
+                        </div>
+                        
+                        <!-- BirthDate & Phone Home all size -->
                         <div class="row">
                             <div class="col m1 hide-on-small-only">&nbsp;</div>
                             <div class="col s12 m4">
@@ -111,8 +124,8 @@
                             <!-- Nationality for small -->
                         	<div class="col s12 hide-on-med-and-up">
                                 <div class="input-field row">
-                                    <input type="text" id="userNationality" class="form-control validate" ng-autocomplete ng-model="signup.nationality.label" details="temp.detailsCountry" options="optionsCountry" placeholder=""/>
-                                    <label for="userNationality">{{'civilSection.label.userNationality' | translate }}</label>
+                                    <input type="text" id="userAddress" class="form-control validate" ng-autocomplete ng-model="temp.address" details="temp.detailsAddress" options="optionsAddress" placeholder=""/>
+                                    <label for="userAddres">{{'civilSection.label.userAddress' | translate }}</label>
                                 </div>
                             </div>
                             
