--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -15,7 +15,7 @@
         <h6 class="card-content">{{event.participants.teamHome.label}} <br/> {{event.participants.teamVisitor.label}}</h6>
         <h6 class="card-content">
             {{event.startDate}}
-            <a ng-show="mapShow" class="waves-effect waves-light modal-trigger {{textColor1}} right" ng-click="openMap()">
+            <a ng-show="mapShow" class="waves-effect waves-light {{textColor1}} right" ng-click="openMap()">
                 <i class="material-icons">location_on</i>
             </a>
         </h6>
