--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -232,6 +232,9 @@
                     <label for="modal-password">{{'content.login.label.password' | translate }}</label>
                 </div>
             </div>
+            <div class="row">
+            	<div><a href="" ng-click="openForgotPwd()">{{'content.login.label.forgotpasswd' | translate }}</a></div>
+            </div>
         </div>
 
         <div class="row center">
@@ -243,6 +246,64 @@
             </div>
         </div>
     </form>
+</div>
+
+<!-- Modal forgot password -->
+<div id="modalForgotPwd" class="modal">
+    <div class="modal-header center-align ">
+        <h5>
+            <span class="fa fa-sign-in"></span>
+            <span translate="content.login.label.forgotpasswd"></span>
+        </h5>
+    </div>
+    <form class="col s12" ng-submit="renewPwd()">
+        <div class="modal-content grey lighten-3 ">
+            <div class="row">
+            	<div class="col s12">
+            		<h6><span translate="content.login.label.forgotpasswdmess"></span></h6>
+            	</div>
+            </div>
+            <div class="row">
+            	<div class="col m3 hide-on-small">&nbsp;</div>
+                <div class="input-field col s12 m6">
+                    <input id="modal-login" type="text" class="validate" ng-model="infos.login" required>
+                    <label for="modal-login">{{'content.login.label.login' | translate }}</label>
+                </div>
+                <div class="col m3 hide-on-small">&nbsp;</div>
+            </div>
+        </div>
+
+        <div class="row center">
+            <div class="col s12">
+                <a href="#/" class="modal-action modal-close waves-effect waves-red btn btn-s red"
+                   translate="commons.buttons.cancel"></a>
+                <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1"
+                        translate="commons.buttons.validate"/>
+            </div>
+        </div>
+    </form>
+</div>
+
+<!-- Modal RenewPwd OK ! -->
+<div id="modalForgotPwdOK" class="modal">
+    <div class="modal-header center-align ">
+        <h5>
+            <span class="fa fa-sign-in"></span>
+            <span translate="content.signup.label.title"></span>
+        </h5>
+    </div>
+    <div class="modal-content grey lighten-3 ">
+        <div class="row">
+            <div class="col s12">
+                {{'modalForgotPwdOk.line1' | translate}}<br>
+                {{'modalForgotPwdOk.line2' | translate}}<br>
+                {{'modalForgotPwdOk.line3' | translate}}<br>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a href="#/" class="modal-action modal-close waves-effect waves-red btn green darken-1" translate="commons.buttons.close"></a>
+    </div>
 </div>
 
 <!-- Modal SignUp -->
