--- a/src/app/modules/commons/users/password/password.html
+++ b/src/app/modules/commons/users/password/password.html
@@ -11,8 +11,7 @@
                 </div>
                 <div class="col s10">
                     <br/>
-                    <h5>PASSWORD.HTML</h5>
-                    <h6>dqsuhdiushqdhi</h6>
+                    <h5>{{ 'renewPasswdPage.title' | translate }}</h5>
                 </div>
                 <div class="col m2 s1">
                     <br/>&nbsp;
@@ -20,4 +19,69 @@
             </div>
         </div>
     </div>
+    
+    <div class="row card bleu-grey-text text-darken-2">
+    	<form ng-submit="renewPasswd()" name="renewForm">
+    		<div class="row">
+    			<div class="col m1 hide-on-smmall">&nbsp;</div>
+    			<div class="col s10 m10"><h6>{{ 'renewPasswdPage.line1' | translate }}</h6></div>
+    			<div class="col m1 hide-on-smmall">&nbsp;</div>
+    		</div>
+    		<div class="row">
+		   		<div class="col m2 hide-on-small">&nbsp;</div>
+				<div class="input-field col m4 s12">
+					<input id="password" type="password" class="validate" ng-model="renew.passwd" required>
+					<label for="password">{{'content.signup.label.password' | translate }}</label>
+					<div ng-show="renew.passwd">
+						<small translate='modalSignupUp.passwd.strength'></small>
+						<div ng-hide="true" ng-password-strength="renew.passwd" strength="passStrength" inner-class="meter"></div>
+						<div class="progress grey lighten-2">
+							<div class="determinate"
+								ng-class="{'red' : passStrength < 33, 'orange': passStrength >= 33 && passStrength < 66, 'green' : passStrength >= 66}"
+								style="width: {{passStrength}}%"></div>
+						</div>
+					</div>
+				</div>
+		              
+				<div class="input-field col m4 s12">
+					<input id="passwordConfirm" type="password" class="validate" ng-model="renew.passwdConfirm" required>
+					<label for="passwordConfirm">{{'content.signup.label.passwordConfirm' | translate }}</label>
+				</div>
+				<div class="col m2 hide-on-small">&nbsp;</div>
+			</div>
+			
+			<div class="row">
+				<div class="col m2 hide-on-small">&nbsp;</div>
+				<div class="input-field col s12 m8">
+					<div re-captcha ng-model="renew.captcha" id="custom_recaptcha_widget" style="display:none">
+						<div class="col s12 m7">
+					    	<div id="recaptcha_image"></div>
+					    </div>
+					    <div class="col s6 m1" style="line-height:0.5;">
+					    	<a href="javascript:Recaptcha.reload()"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/refresh.png"></a><br class="hide-on-med-and-down">
+			    			<a class="recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')" id="icon-audio"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/audio.png"></a>
+		      				<a class="recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')" id="icon-image"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/text.png"></a><br class="hide-on-med-and-down">
+		      				<a href="javascript:Recaptcha.showhelp()"><img id="recaptcha_whatsthis" width="25" height="16" src="http://www.google.com/recaptcha/api/img/clean/help.png" alt="Aide"></a>
+					    </div>
+					    <div class="col s6 m4"><img id="recaptcha_logo" alt="" width="71" height="36" src="http://www.google.com/recaptcha/api/img/clean/logo.png"></div>
+						<div class="col s12 m6">
+							<input type="text" id="recaptcha_response_field" name="recaptcha_response_field" />
+						</div>
+						<div class="col m6 hide-on-med-and-down">&nbsp;</div>
+					</div>
+				</div>
+				<div class="col m4 hide-on-small">&nbsp;</div>
+			</div>
+			
+			<div class="row center">
+	            <div class="col s12">
+	                <a href="" ng-click="cancelRenew()" class="modal-action modal-close waves-effect waves-red btn btn-s red" style="max-width:50%"
+	                   translate="commons.buttons.cancel"></a>
+	                <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1" style="max-width:50%"
+	                        translate="commons.buttons.validate"/>
+	            </div>
+        	</div>
+    	</form>
+    </div> 
+    
 </div>
