mise en forme date SB Personne ...

--- a/src/app/modules/test/admin/adminUser.html
+++ b/src/app/modules/test/admin/adminUser.html
@@ -346,7 +346,7 @@
 					<div class="col s3">name</div><div class="col s9">: {{person.name}}</div>
 					<div class="col s3">firstname</div><div class="col s9">: {{person.firstname}}</div>
 					<div class="col s3">gender</div><div class="col s9">: {{person.gender}}</div>
-					<div class="col s3">birthdate</div><div class="col s9">: {{person.birthdate}}</div>
+					<div class="col s3">birthdate</div><div class="col s9">: {{person.birthdateFormatted}}</div>
 					<div class="col s3">birthcity</div><div class="col s9">: {{person.birthcity}}</div>
 					<div class="col s3">nationality</div><div class="col s9">: {{person.nationality}}</div>
 				</div>
